k8s-specifications/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-app
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: vote.devxops.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name:  voting-service
            port:
              number: 80
  - host: result.devxops.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: result-service
            port:
              number: 80
